# ying-ju-crawler-schema

./: Cargo.toml  README.md  legado.json  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: update-docs.yml
crates/runtime/: Cargo.toml
crates/runtime/examples/: simple_crawler.rs  toml_crawler.rs
crates/runtime/examples/rules/: 17xiaoshuo.toml
crates/runtime/src/: config.rs  context.rs  error.rs  lib.rs  template.rs  validation.rs
crates/runtime/src/challenge/: detector.rs  handler.rs  manager.rs  mod.rs
crates/runtime/src/context/: flow.rs  mod.rs  runtime.rs  state.rs  variable.rs
crates/runtime/src/crawler/: builder.rs  mod.rs  runtime.rs
crates/runtime/src/extractor/: engine.rs  executor.rs  mod.rs  value.rs
crates/runtime/src/extractor/filter/: array.rs  convert.rs  encoding.rs  executor.rs  mod.rs  registry.rs  string.rs  url.rs
crates/runtime/src/extractor/selector/: attr.rs  component.rs  condition.rs  const_value.rs  css.rs  index.rs  json.rs  map.rs  mod.rs  noop.rs  regex.rs  set_var.rs  var.rs  xpath.rs
crates/runtime/src/flow/: content.rs  detail.rs  discovery.rs  executor.rs  login.rs  mod.rs  pager.rs  search.rs
crates/runtime/src/http/: client.rs  config.rs  mod.rs  request.rs
crates/runtime/src/script/: context.rs  engine.rs  executor.rs  factory.rs  js_engine.rs  lua_engine.rs  mod.rs  python_engine.rs  rhai_engine.rs
crates/runtime/src/script/builtin/: core.rs  js.rs  lua.rs  mod.rs  python.rs  rhai.rs
crates/runtime/src/template/: engine.rs  mod.rs  renderer.rs  validator.rs
crates/runtime/src/util/: cache.rs  concurrent.rs  mod.rs
crates/runtime/src/webview/: provider.rs
crates/schema/: Cargo.toml
crates/schema/src/: core.rs  error.rs  extract.rs  lib.rs  script.rs  template.rs
crates/schema/src/config/: http.rs  meta.rs  mod.rs  scripting.rs
crates/schema/src/fields/: audio.rs  book.rs  common.rs  item.rs  list_rules.rs  manga.rs  mod.rs  video.rs
crates/schema/src/flow/: common.rs  component.rs  content.rs  detail.rs  discovery.rs  login.rs  mod.rs  search.rs
docs/: Implementation_Plan.md
src/: lib.rs
src/config/: cache.rs  http.rs  meta.rs  scripting.rs
src/core/: mod.rs
src/flow/: mod.rs
src/pipeline/: mod.rs
src/runtime/: limits.rs  mod.rs  pipeline.rs  validation.rs
src/schema/: mod.rs
src/schema/config/: limits.rs
src/schema/pipeline/: mod.rs
src/schema/pipeline/steps/: core.rs  data.rs
src/types/: mod.rs  render.rs
