[package]
name = "crawler-schema"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
schemars = "1.1.0"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"

[lib]
name = "crawler_schema"
path = "src/lib.rs"
