[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
schemars = "1"
tera = "1"
thiserror = "2"
regex = "1"

# workspace internal
crawler-schema = { path = "crates/schema" }
crawler-runtime = { path = "crates/runtime" }
