[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
schemars = "1"
tera = "1"
thiserror = "2"
regex = "1"
scraper = "0.24.0"
url = "2.5.7"
tracing = "0.1"
jsonpath-rust = "1.0.4"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
rhai = { version = "1", features = ["sync"] }
async-trait = "0.1"
boa_engine = "0.21"
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
rustpython-vm = "0.4"
base64 = "0.22.1"
urlencoding = "2.1.3"
md5 = "0.8.0"
sha1 = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
quick_cache = "0.6.18"
zhconv = { version = "0.4", features = ["opencc"] }
dashmap = "6.1.0"

# workspace internal
crawler-schema = { path = "crates/schema" }
crawler-runtime = { path = "crates/runtime" }
