[package]
name = "crawler-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
crawler-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
thiserror.workspace = true
regex.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
toml.workspace = true
rhai.workspace = true
boa_engine.workspace = true
mlua.workspace = true
rustpython-vm.workspace = true
base64.workspace = true
urlencoding.workspace = true
md5.workspace = true
lru.workspace = true

[lib]
name = "crawler_runtime"
path = "src/lib.rs"
