[package]
name = "crawler-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
# Ying-Ju 规范核心依赖
crawler-schema.workspace = true

# 序列号化与反序列化
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# 模板引擎
tera.workspace = true

# 错误处理
thiserror.workspace = true

# 数据提取与处理
regex.workspace = true
scraper.workspace = true
jsonpath-rust.workspace = true

# HTTP 客户端与异步支持
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true

# 脚本引擎
rhai.workspace = true
boa_engine.workspace = true
mlua.workspace = true
rustpython-vm.workspace = true

# 缓存
quick_cache.workspace = true

# 实用工具
base64.workspace = true
urlencoding.workspace = true
md5.workspace = true
sha1.workspace = true
sha2.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
zhconv.workspace = true


[lib]
name = "crawler_runtime"
path = "src/lib.rs"
