[package]
name = "crawler-schema"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
regex.workspace = true

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"

[lib]
name = "crawler_schema"
path = "src/lib.rs"
